<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/main_background"
    tools:context="com.els.yourwaycafe.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start"
        android:background="@color/start_btn"
        android:text="@string/btn_start"
        android:textColor="#ffffff"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="startClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_prev"
        android:layout_below="@+id/btn_start"
        android:layout_toLeftOf="@+id/btn_start"
        android:layout_toStartOf="@+id/btn_start"
        android:layout_marginTop="67dp"
        android:background="@color/prev_btn"
        android:text="@string/btn_prev"
        android:textColor="#ffffff"
        android:onClick="showPrev"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_fav"
        android:layout_alignTop="@+id/btn_prev"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/fave_button"
        android:text="@string/btn_fav"
        android:textColor="#ffffff"
        android:onClick="showFav"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_img"
        android:layout_above="@+id/btn_start"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/feast_buffet"
        android:contentDescription="@string/content_description"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mix_match"
        android:id="@+id/mix_msg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:textColor="#ffffff" />

</RelativeLayout>
